--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 
 *.pyc
+.vs/slnx.sqlite
+.vs/SW_II_AD/FileContentIndex/a40e2fb6-b8e1-4c6c-aef5-6683dfe37936.vsidx
+.vs/SW_II_AD/FileContentIndex/b019a7ca-dea0-44a7-9a76-15798dcc96ba.vsidx
+.vs/SW_II_AD/FileContentIndex/read.lock
+.vs/SW_II_AD/v17/.suo
+.vs/VSWorkspaceState.json
